fix leaderboard overflow

--- a/frontend/src/components/leaderboard/leaderstyle.scss
+++ b/frontend/src/components/leaderboard/leaderstyle.scss
@@ -122,4 +122,6 @@
   background-size: cover;
   width: 100%;
   height: 100%;
+  display: flex;
+  align-items: center;
 }
